# park_c_cpp_hw

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Weather.c  Weather.h  WeatherInputOutput.c  WeatherInputOutput.h
headers/: findAllSequence.h  findSequence.h  readAndCloseFile.h
hw1/: .travis.yml  README.md  main.c  test_weather.cpp
hw2/: .gitignore  CMakeLists.txt  README.md
logs/: test_result.Weather.c.html  test_result.html  valgrindLog.txt
logs/gcovrLogs/multiProcess/: test_multiProcess.html  test_multiProcess.sources_findAllSequenceMultiProcess.c.html  test_multiProcess.sources_findSequence.c.html  test_multiProcess.sources_readAndCloseFile.c.html  test_multiProcess.tests_test_multiProcess.cpp.html
logs/gcovrLogs/oneProcess/: test_oneProcess.html  test_oneProcess.sources_findAllSequenceOneProcess.c.html  test_oneProcess.sources_findSequence.c.html  test_oneProcess.sources_readAndCloseFile.c.html  test_oneProcess.tests_test_oneProcess.cpp.html
logs/stressTestsLogs/: TimeСomparison.txt  diffResult.txt  multiProcess.txt  oneProcess.txt
logs/valgrindLogs/: valgrindLogMultiProcess.txt  valgrindLogOneProcess.txt
sources/: findAllSequenceMultiProcess.c  findAllSequenceOneProcess.c  findSequence.c  main.c  readAndCloseFile.c
tests/: test_multiProcess.cpp  test_oneProcess.cpp
texts/: testfile1.txt  testfile2.txt  textMaker.sh
